[package]
name = "tusk"
version = "0.1.0"
edition = "2021"
authors = ["rikoteki"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2"
windows-result = "0.1.2"

[dependencies.windows]
version = "0.54.0"
features = [
  "Win32_System_Antimalware"
]
